apps/mautrix/linkedin/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin
spec:
  hostnames:
    - mautrix-linkedin.i.shikanime.studio
  parentRefs:
    - name: linkedin
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin-redirect
spec:
  hostnames:
    - mautrix-linkedin.i.shikanime.studio
  parentRefs:
    - name: linkedin
      sectionName: http
